messing with Jason

--- a/src/assets/appsettings.json
+++ b/src/assets/appsettings.json
@@ -6,7 +6,7 @@
   "marketingUrl": "http://localhost:5110",
   "callBackUrl": "http://localhost:5104/",
   "useCustomizationData": true,
-  "Name": "Up A Creek",
+  "Name": "Paddle Me",
   "Phone": "404-555-1234",
   "Fax": "",
   "Address1": "1234 Nowhere Ln",
